fix: fix tab not responsive (#628)

--- a/src/components/ButtonIcon/styles.scss
+++ b/src/components/ButtonIcon/styles.scss
@@ -234,3 +234,7 @@
         font-size: 1.5rem !important;
     }
 }
+
+.rainbow-button-icon[disabled] svg {
+    fill: $color-gray-2;
+}
